# openautolink

./: .aider.chat.history.md  .aider.input.history  .gitignore  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.md  build.gradle.kts  build_linux.sh  test-model  tmp_car_logcat.txt  tmp_phone_logcat.txt
.aider.tags.cache.v4/: cache.db
.codex/environments/: environment.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: app-kotlin.instructions.md  audio-pipeline.instructions.md  bridge-cpp.instructions.md  bridge-dev-workflow.instructions.md  emulator-ui-testing.instructions.md  pixel-aspect.instructions.md  ui-requirements.instructions.md  video-pipeline.instructions.md
.github/workflows/: build-companion.yml  build-native-deps.yml  ci.yml  fork-build.yml  release-apk.yml  release-bridge.yml
app/: README.md  build.gradle.kts  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ev_profiles.json
app/src/main/cpp/: CMakeLists.txt  aasdk_jni.cpp  jni_channel_handlers.cpp  jni_channel_handlers.h  jni_session.cpp  jni_session.h  jni_transport.cpp  jni_transport.h
app/src/main/cpp/cmake/: Findlibusb-1.0.cmake
app/src/main/cpp/stubs/: libusb.h  libusb_stub.c
app/src/main/java/com/openautolink/app/: MainActivity.kt  OalApplication.kt
app/src/main/java/com/openautolink/app/audio/: AacDecoder.kt  AudioFrame.kt  AudioPlayer.kt  AudioPlayerImpl.kt  AudioPurposeSlot.kt
app/src/main/java/com/openautolink/app/cluster/: ClusterIconShimProvider.kt  ClusterMainSession.kt  ClusterManager.kt  ClusterNavigationState.kt  ClusterSessionDelegate.kt  OalClusterService.kt  OalClusterSession.kt
app/src/main/java/com/openautolink/app/data/: AppPreferences.kt  EvLearnedRateEstimator.kt  EvProfilesRepository.kt  GmHistoryProviderRepository.kt  KnownPhonesStore.kt
app/src/main/java/com/openautolink/app/diagnostics/: CarPropertyEnumerator.kt  DeviceDebugProbe.kt  DiagnosticLog.kt  FileLogWriter.kt  GmReconProbe.kt  OalLog.kt  RemoteDiagnosticsImpl.kt  SettingsReceiver.kt  TcpSyslogSink.kt
app/src/main/java/com/openautolink/app/input/: IgnitionMonitor.kt  ImuForwarder.kt  KeyCaptureBus.kt  SteeringWheelController.kt  TouchScaler.kt  VehicleDataForwarderImpl.kt
app/src/main/java/com/openautolink/app/media/: OalMediaSessionManager.kt
app/src/main/java/com/openautolink/app/navigation/: NavigationDisplay.kt  NavigationDisplayImpl.kt
app/src/main/java/com/openautolink/app/session/: SessionManager.kt  SessionState.kt
app/src/main/java/com/openautolink/app/transport/: BridgeConnection.kt  BridgeUpdateManager.kt  ConfigUpdateSender.kt  ConnectionManager.kt  ControlMessage.kt  ControlMessageSerializer.kt  OalProtocol.kt  PhoneDiscovery.kt  TcpAudioChannel.kt  TcpControlChannel.kt  TcpVideoChannel.kt
app/src/main/java/com/openautolink/app/video/: AaVideoCodec.kt  CodecSelector.kt  MarginAutoCalc.kt  MediaCodecDecoder.kt  NalParser.kt  VideoDecoder.kt  VideoFrame.kt
app/src/main/proto/oal/: playback.proto
app/src/test/java/com/openautolink/app/cluster/: ClusterHelpersTest.kt
app/src/test/java/com/openautolink/app/data/: EvLearnedRateEstimatorTest.kt
app/src/test/java/com/openautolink/app/input/: SteeringWheelControllerTest.kt
app/src/test/java/com/openautolink/app/transport/: MockOalBridgeServer.kt  TransportIntegrationTest.kt
app/src/test/java/com/openautolink/app/video/: AaVideoCodecTest.kt  CodecSelectorTest.kt
bridge/: README.md
bridge/openautolink/headless/: CMakeLists.txt
bridge/openautolink/headless/include/openautolink/: headless_config.hpp  live_session.hpp  oal_log.hpp  oal_mock_session.hpp  oal_session.hpp  session.hpp  tcp_car_transport.hpp
bridge/openautolink/headless/src/: live_session.cpp  main.cpp  oal_session.cpp  session.cpp
bridge/openautolink/scripts/: aa_bt_all.py
bridge/sbc/: apply-bridge-update.sh  install.sh  openautolink.env  run-openautolink.sh  start-wireless.sh
companion/: build.gradle.kts  proguard-rules.pro
companion/src/main/: AndroidManifest.xml
companion/src/main/java/com/openautolink/companion/: CompanionPrefs.kt  MainActivity.kt
companion/src/main/java/com/openautolink/companion/autostart/: AutoStartReceiver.kt  WifiJobService.kt
companion/src/main/java/com/openautolink/companion/connection/: AaProxy.kt  NearbySocket.kt
docs/: aa-undocumented-features.md  architecture.md  bridge-update.md  car-hotspot-wifi-auto-connect-plan.md  custom-viewport.md  direct-mode-plan.md  embedded-knowledge.md  ev-energy-model-reverse-engineering.md  ev-energy-model-tuning-plan.md  gm-aaos-recon.md  headunit-revived-feature-comparison.md  multi-display-projection-plan.md  multi-phone-nearby.md  multi-phone.md  native-wireless.md  networking.md  privacy-policy.md  protocol.md  testing.md  usb-mode.md  usb-transport-plan.md  video-quality-investigation.md  work-plan-archive.md  work-plan.md
docs/prototypes/: safe-area-editor.html
docs/reference/gminfo/projection/: cluster_navigation.md
dotnet/: OpenAutoLink.sln  README.md
dotnet/OpenAutoLink.CarApp/: AndroidManifest.xml  MainActivity.cs  OalApplication.cs  OpenAutoLink.CarApp.csproj
dotnet/OpenAutoLink.CarApp/Native/: NativeMethods.cs
dotnet/OpenAutoLink.CarApp/Resources/layout/: Main.axml
dotnet/OpenAutoLink.CarApp/Resources/values/: strings.xml
dotnet/OpenAutoLink.Core/Diagnostics/: OalLogger.cs
dotnet/OpenAutoLink.Core/Session/: SessionState.cs  SessionStatus.cs  ShellSessionCoordinator.cs
dotnet/OpenAutoLink.Core/Transport/: DiscoveredPhone.cs  PhoneDiscoveryService.cs  TcpConnector.cs
dotnet/OpenAutoLink.Native/: CMakeLists.txt
dotnet/OpenAutoLink.Native/include/: oal_shim.h
dotnet/OpenAutoLink.Native/src/: oal_shim.cpp
scripts/: analyze-video-artifacts.ps1  build-aasdk-android.sh  build-bridge-wsl.sh  build-ev-profiles.py  bundle-headunit.ps1  capture-screenshots.ps1  create-release.ps1  deploy-bridge.ps1  mock_bridge.py  setup-ndk-deps.sh  test-emu-resolution.ps1
scripts/linux/: README.md  build-android.sh  bundle-release.sh
(+51 files in other folders)
